<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MapsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/add_marker_title"
        android:id="@+id/titleTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="@color/color_text"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="50dp"
        android:layout_below="@+id/titleTextView"
        android:gravity="center_horizontal"
        android:id="@+id/linearLayout">
        
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_marker_title_hint"
            android:id="@+id/titleEditText"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/descriptionEditText"
            android:hint="@string/add_marker_description_hint"
            android:importantForAutofill="no" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true">

        <Button
            style="@style/FragmentButtonStyle"
            android:text="@string/cancel_btn_txt"
            android:id="@+id/cancelButton"/>

        <Button
            style="@style/FragmentButtonStyle"
            android:text="@string/save_btn_txt"
            android:id="@+id/saveButton" />
    </LinearLayout>


</RelativeLayout>