<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/loginPageImageView"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/startButton"
        android:scaleType="centerCrop"
        android:src="@drawable/login_background"
        android:contentDescription="@string/login_background_description"/>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_title"
        android:fontFamily="@font/rustico"
        android:textColor="@color/colorText"
        android:textSize="62sp"
        android:layout_marginTop="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:text="@string/go_exploring_btn_text"
        android:textSize="16sp"
        android:id="@+id/startButton"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorText"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/disclaimer_text"
        android:id="@+id/warningTextView"
        android:drawableStart="@drawable/ic_warning_white_24dp"
        android:layout_above="@+id/startButton"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="45dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:layout_gravity="start"
        android:drawablePadding="10dp"
        android:singleLine="false"/>

</RelativeLayout>
